refactor: improve domain logic and add unit tests